Se agrego el modulo de Categorias (Ejemplo inicial)

--- a/SCI.Infrastructure/SCI.Infrastructure.vbproj
+++ b/SCI.Infrastructure/SCI.Infrastructure.vbproj
@@ -76,7 +76,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\ItemMenu.vb" />
     <Compile Include="Helpers\Crypto.vb" />
+    <Compile Include="Helpers\GuiViewBase.vb" />
     <Compile Include="Helpers\RelayCommand.vb" />
     <Compile Include="Helpers\ServiceLocator.vb" />
     <Compile Include="Helpers\ViewModelBase.vb" />
