--- a/SCI.WPF.Shell/SCI.WPF.Shell.vbproj
+++ b/SCI.WPF.Shell/SCI.WPF.Shell.vbproj
@@ -62,8 +62,8 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MahApps.Metro, Version=1.2.4.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.1.2.4.0\lib\net45\MahApps.Metro.dll</HintPath>
+    <Reference Include="MahApps.Metro, Version=1.3.0.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\MahApps.Metro.1.3.0\lib\net45\MahApps.Metro.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MaterialDesignColors, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -82,7 +82,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.1.2.4.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
+      <HintPath>..\packages\MahApps.Metro.1.3.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -170,7 +170,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSI.BusinessLogic\SCI.BusinessLogic.vbproj">
+    <ProjectReference Include="..\SCI.BusinessLogic\SCI.BusinessLogic.vbproj">
       <Project>{d1d93999-2ab2-48fe-a241-2124ac157052}</Project>
       <Name>SCI.BusinessLogic</Name>
     </ProjectReference>
@@ -181,14 +181,6 @@
     <ProjectReference Include="..\SCI.Infrastructure\SCI.Infrastructure.vbproj">
       <Project>{6a1b3e85-59c3-4630-bceb-10f2400db955}</Project>
       <Name>SCI.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SCI.Modules.Dashboard\SCI.Modules.Dashboard.vbproj">
-      <Project>{613ab8c0-ee0f-4b22-81fa-1d4663dd4ad8}</Project>
-      <Name>SCI.Modules.Dashboard</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SCI.Modules.Manager\SCI.Modules.Manager.vbproj">
-      <Project>{5c2bd78a-fc6f-4be7-b741-819ef2834821}</Project>
-      <Name>SCI.Modules.Manager</Name>
     </ProjectReference>
     <ProjectReference Include="..\SCI.Modules.UserLogin\SCI.Modules.UserLogin.vbproj">
       <Project>{9c50055f-7836-4e2c-b544-0e80ad531aac}</Project>
