--- a/SCI.BusinessLogic/SCI.BusinessLogic.vbproj
+++ b/SCI.BusinessLogic/SCI.BusinessLogic.vbproj
@@ -91,8 +91,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Services\Implementations\CategoryDataService.vb" />
+    <Compile Include="Services\Implementations\EmployeeDataService.vb" />
     <Compile Include="Services\Implementations\UserDataService.vb" />
     <Compile Include="Services\Interfaces\ICategoryDataService.vb" />
+    <Compile Include="Services\Interfaces\IEmployeeDataService.vb" />
     <Compile Include="Services\Interfaces\IUserDataService.vb" />
   </ItemGroup>
   <ItemGroup>
