--- a/SCI.Modules.Manager/SCI.Modules.Manager.vbproj
+++ b/SCI.Modules.Manager/SCI.Modules.Manager.vbproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9C50055F-7836-4E2C-B544-0E80AD531AAC}</ProjectGuid>
+    <ProjectGuid>{C64EB509-DD64-46A1-9187-15200FB21AA2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>
     </RootNamespace>
-    <AssemblyName>SCI.Modules.UserLogin</AssemblyName>
+    <AssemblyName>SCI.Modules.Manager</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>SCI.Modules.UserLogin.xml</DocumentationFile>
+    <DocumentationFile>SCI.Modules.Manager.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>SCI.Modules.UserLogin.xml</DocumentationFile>
+    <DocumentationFile>SCI.Modules.Manager.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -78,8 +78,6 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.3.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -118,11 +116,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="ViewModels\UserLoginViewModel.vb" />
-    <Compile Include="Views\UserLoginView.xaml.vb">
-      <DependentUpon>UserLoginView.xaml</DependentUpon>
+    <Compile Include="ViewModels\ManagerViewModel.vb" />
+    <Compile Include="Views\ManagerView.xaml.vb">
+      <DependentUpon>ManagerView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Xaml Helpers\PasswordBoxHelper.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -146,11 +143,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{94E38DFF-614B-4CBD-B67C-F211BB35CE8B}" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Page Include="Views\UserLoginView.xaml">
+    <Page Include="Views\ManagerView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -168,11 +161,20 @@
       <Project>{6a1b3e85-59c3-4630-bceb-10f2400db955}</Project>
       <Name>SCI.Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SCI.Modules.Manager\SCI.Modules.Manager.vbproj">
-      <Project>{c64eb509-dd64-46a1-9187-15200fb21aa2}</Project>
-      <Name>SCI.Modules.Manager</Name>
+    <ProjectReference Include="..\SCI.Modules.Category\SCI.Modules.Category.vbproj">
+      <Project>{126ef6b1-e717-4e10-a6b3-97cea621881c}</Project>
+      <Name>SCI.Modules.Category</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCI.Modules.Dashboard\SCI.Modules.Dashboard.vbproj">
+      <Project>{f2b92370-8f05-44e0-abc1-be039be57089}</Project>
+      <Name>SCI.Modules.Dashboard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SCI.Modules.Employee\SCI.Modules.Employee.vbproj">
+      <Project>{c3742918-3273-4259-aece-fef17931db55}</Project>
+      <Name>SCI.Modules.Employee</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
