--- a/SCI.BusinessObjects/SCI.BusinessObjects.vbproj
+++ b/SCI.BusinessObjects/SCI.BusinessObjects.vbproj
@@ -174,6 +174,7 @@
     <Compile Include="Schema\Venta.vb">
       <DependentUpon>SCIDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Util\SCILog.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
