Actualizacion por Visualizacion

--- a/SCI.BusinessObjects/App.Config
+++ b/SCI.BusinessObjects/App.Config
@@ -30,7 +30,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="InventarioDemoEntities" connectionString="metadata=res://*/Schema.SCIDataModel.csdl|res://*/Schema.SCIDataModel.ssdl|res://*/Schema.SCIDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8JASUVC\SQLEXPRESS;initial catalog=Inventario_Demo_En;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="InventarioDemoEntities" connectionString="metadata=res://*/Schema.SCIDataModel.csdl|res://*/Schema.SCIDataModel.ssdl|res://*/Schema.SCIDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8JASUVC\SQLEXPRESS;initial catalog=Inventario_Demo_En;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
