--- a/SCI.Infrastructure/SCI.Infrastructure.vbproj
+++ b/SCI.Infrastructure/SCI.Infrastructure.vbproj
@@ -95,6 +95,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Util\SCIActivity.vb" />
     <Compile Include="Util\SCILog.vb" />
   </ItemGroup>
   <ItemGroup>
