--- a/SCI.WPF.Shell/App.config
+++ b/SCI.WPF.Shell/App.config
@@ -11,6 +11,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="InventarioDemoEntities" connectionString="metadata=res://*/Schema.SCIDataModel.csdl|res://*/Schema.SCIDataModel.ssdl|res://*/Schema.SCIDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8JASUVC\SQLEXPRESS;initial catalog=Inventario_Demo_En;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InventarioDemoEntities" connectionString="metadata=res://*/Schema.SCIDataModel.csdl|res://*/Schema.SCIDataModel.ssdl|res://*/Schema.SCIDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8JASUVC\SQLEXPRESS;initial catalog=Inventario_Demo_En;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
